# meta-openenv-hack

./: README.md  inference.py  openenv.yaml  pyproject.toml
crispr_env/: pyproject.toml
server/: Dockerfile  app.py  environment.py
